Fetch class from rule